<resources>
    <string name="app_name">N.S.V.S</string>
    <string name="welocome_to_namugongo_secondary_and_vocational_school">welocome to NAMUGONGO sECONDARY AND VOCATIONAL SCHOOL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2" />
    <string name="email_login">Email Login</string>
    <string name="academics">Academics</string>
    <string name="about_us">About-Us</string>
    <string name="features">Features</string>
    <string name="chapel">Chapel</string>
    <string name="co_curricular">Co-Curricular</string>
    <string name="mdd">MDD</string>
    <string name="sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n_s_v_s">N.S.V.S</string>
    <string name="education_for_employment">EDUCATION FOR EMPLOYMENT</string>
    <string name="password" />
    <string name="login" />
    <string name="sign_in" />
    <string name="sign_out">sign_out</string>
    <string name="sign_up">sign_up</string>
    <string name="don_t_have_an_account">don_t_have_an_account</string>
    <string name="email">email</string>
    <string name="create">CREATE</string>
    <string name="welcome_to_namugongo_s_v_s">WELCOME TO NAMUGONGO S.V.S</string>
    <string name="next">NEXT</string>
    <string name="welcome_to_n_s_v_s">welcome to N.S.V.S</string>
</resources>